updates at 2:10pm

--- a/index.html
+++ b/index.html
@@ -48,31 +48,27 @@
         <div class="container-fluid">
             <div class="header-wrap">
                 <div class="row">
-                    <div class="col-md-auto offset-md-1">
+                    <div class="col-md-1">
+
+                    </div>
+                    <div class="col-md-10 wht_background">
                         <h2 class="h2_text">
                             About Me
                         </h2>
-                    </div>
-                </div>
-            </div>
-
-            <hr>
-
-            <div class="row">
-                <div class="col-md-10 offset-md-1">
-                    <img src="./assets/images/yawning-dog.jpg" alt="Dog with Coffee" id="my_image"/>
-                    <aside class="clearfix">
-                        <p>Hey everyone, here you'll find a bit of information about...well, me.  Clearly you're interested.  I mean who wouldn't be.
-                        However, it is entirely possible that you are being forced to read this, or at least the code behind what you are seeing on
-                        the page.  Either way, I hope you are at least mildly entertained.
-                        </p>
-                        <P>
-                        While I'm a very personable individual, I have never been a morning person.  So it is probably in your best interest to not expect too 
-                        much unless I've had a sufficient dose of coffee.  However, after the first cup of coffee I am good to go.  Interest-wise, too much to put here,
-                        but most people have music preferences so I will start with that.  If you're interested in any of the following groups or genres there's a pretty good 
-                        chance we'll get along.
-                        </P>
-                        <p>
+                        <hr>
+                        <img src="./assets/images/yawning-dog.jpg" alt="Dog with Coffee" id="my_image"/>
+                        <aside class="clearfix">
+                            <p>Hey everyone, here you'll find a bit of information about...well, me.  Clearly you're interested.  I mean who wouldn't be.
+                            However, it is entirely possible that you are being forced to read this, or at least the code behind what you are seeing on
+                            the page.  Either way, I hope you are at least mildly entertained.
+                            </p>
+                            <P>
+                            While I'm a very personable individual, I have never been a morning person.  So it is probably in your best interest to not expect too 
+                            much unless I've had a sufficient dose of coffee.  However, after the first cup of coffee I am good to go.  Interest-wise, too much to put here,
+                            but most people have music preferences so I will start with that.  If you're interested in any of the following groups or genres there's a pretty good 
+                            chance we'll get along.
+                            </P>
+                            <p>
                             Music:
                             <ul class="music_ul">
                                 <li>Indie Rock</li>
@@ -100,20 +96,21 @@
                                     <li class="music_li">The Avett Brothers</li>
                                 </ul>
                             </ul>
-                        </p>
-                    </aside>
-                </div>
+                            </p>
+                    </div>
+                    <div class="col-md-1">
 
-                <div class="col-1">
-
+                    </div>
                 </div>
             </div>
 
-                <br>
-
-
         </div>
         </section>
+
+        <div class="row">
+                <div class="col-md-auto">
+                </div>
+            </div>
 
 
         <footer class="clearfix">
