--- a/index.html
+++ b/index.html
@@ -72,26 +72,26 @@
                             Music:
                             <ul class="music_ul">
                                 <li>Indie Rock</li>
-                                <ul class="music_ul">
+                                <ul>
                                     <li class="music_li">Interpol</li>
                                     <li class="music_li">Grizzly Bears</li>
                                     <li class="music_li">The National</li>
                                 </ul>
                                 <li>Hip-Hop</li>
-                                <ul class="music_ul">
+                                <ul>
                                     <li class="music_li">Jurassic5</li>
                                     <li class="music_li">Dilated Peoples</li>
                                     <li class="music_li">Little Dicky</li>
                                 </ul>
                                 <li>Rock</li>
-                                <ul class="music_ul">
+                                <ul>
                                     <li class="music_li">Sound Garden</li>
                                     <li class="music_li">Pearl Jam</li>
                                     <li class="music_li">Tool</li>
                                     <li class="music_li">Nine Inch Nails</li>
                                 </ul>
                                 <li>Some Country</li>
-                                <ul class="music_ul">
+                                <ul>
                                     <li class="music_li">Zac Brown Band</li>
                                     <li class="music_li">The Avett Brothers</li>
                                 </ul>
@@ -107,11 +107,13 @@
         </div>
         </section>
 
-        <div class="row">
-                <div class="col-md-auto">
-                </div>
-            </div>
-
+        <!-- these are required to show a space between the section and hte footer
+        I do not understand why it is necessary.  I thought putting a single row with
+        a col-md-auto and no background color (permitting the background image to show)
+        would provided a space before the footer...but it did not.-->
+        <br>
+        <br>
+        <br>
 
         <footer class="clearfix">
 
